# solidguard

./: .gitignore  README.md  Taskfile.yml  package.json  proposal.qmd  pyproject.toml  render.yaml  report.qmd
backend/: Dockerfile  app.py  contract_classifier.py  contract_generator.py  requirements.txt  retrieve_embeddings.py
backend/prompts/: classify_raw.txt  generate_contracts.txt
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  GeneratePanel.tsx  ModeToggle.tsx  ModelSelector.tsx  OnboardingModal.tsx  RealtimeToggle.tsx  ResultsPanel.tsx  SkeletonLoader.tsx  TopToolbar.tsx  VulnerabilityCard.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: useAnalyzeContract.ts  useGenerateContract.ts  useRealtimeAnalysis.ts
frontend/src/lib/: solidityLanguage.ts
frontend/src/pages/: Index.tsx
research/: Taskfile.yml
research/RAG_docs/access_control/: nethermd_access_control.txt  swc_unprotected_ether_withdrawal.txt  swc_write_to arbitrary_storage_location.txt  updated2_unprotected_ether_withdrawal.txt  updated_unprotected_ether_withdrawal.txt  updated_write_to_arbitrary_storage_location.txt
research/RAG_docs/arithmetic/: nethermd_math_errors.txt  swc_integer_overflow_and_underflow.txt  (+1 more)
research/docs/: DE.FI Audit Findings - Sheet1.csv  possible_benchmark_implementation.txt  possible_metrics.md
research/prompts/: audit_pdf_to_json.txt  classify_rag.txt  generate_contracts.txt
research/scripts/: pipeline.py
(+97 files in other folders)
