[project]
name = "solidguard-backend"
version = "1.0.0"
description = "SolidGuard vulnerability classifier + generator backend"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "anthropic>=0.74.0",
    "chatlas>=0.13.2",
    "dotenv>=0.9.9",
    "fastapi>=0.123.4",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "slither-analyzer>=0.11.3",
    "tiktoken>=0.12.0",
    "uv>=0.9.14",
    "uvicorn>=0.38.0",
]
